Iptables original full.txt
vyos@INF-VyOS02:~$ sudo iptables-save
# Generated by iptables-save v1.4.12.2 on Wed Nov  1 08:17:40 2017
*security
:INPUT ACCEPT [49181:3054402]
:FORWARD ACCEPT [1018711:219495130]
:OUTPUT ACCEPT [44588:2662633]
COMMIT
# Completed on Wed Nov  1 08:17:40 2017
# Generated by iptables-save v1.4.12.2 on Wed Nov  1 08:17:40 2017
*mangle
:PREROUTING ACCEPT [950592:143518993]
:INPUT ACCEPT [90860:6592559]
:FORWARD ACCEPT [1622779:307022051]
:OUTPUT ACCEPT [70964:4227495]
:POSTROUTING ACCEPT [1690667:311086825]
:ISP_eth1 - [0:0]
:ISP_eth2 - [0:0]
:ISP_eth3 - [0:0]
:WANLOADBALANCE_PRE - [0:0]
-A PREROUTING -j WANLOADBALANCE_PRE
-A ISP_eth1 -j CONNMARK --set-xmark 0x1/0xffffffff
-A ISP_eth1 -j MARK --set-xmark 0x1/0xffffffff
-A ISP_eth1 -j ACCEPT
-A ISP_eth2 -j CONNMARK --set-xmark 0x2/0xffffffff
-A ISP_eth2 -j MARK --set-xmark 0x2/0xffffffff
-A ISP_eth2 -j ACCEPT
-A ISP_eth3 -j CONNMARK --set-xmark 0x3/0xffffffff
-A ISP_eth3 -j MARK --set-xmark 0x3/0xffffffff
-A ISP_eth3 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.2.2.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.4.0.0/16 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.16.0.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.32.0.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.40.0.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.54.0.0/19 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.55.1.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.64.0.0/16 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.92.2.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.128.0.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.128.1.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.172.0.0/16 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.200.0.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -d 10.200.2.0/24 -i eth0 -j ACCEPT
-A WANLOADBALANCE_PRE -i eth0 -m state --state NEW -m statistic --mode random --probability 0.50000000000 -j ISP_eth2
-A WANLOADBALANCE_PRE -i eth0 -m state --state NEW -j ISP_eth3
-A WANLOADBALANCE_PRE -i eth0 -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
COMMIT
# Completed on Wed Nov  1 08:17:40 2017
# Generated by iptables-save v1.4.12.2 on Wed Nov  1 08:17:40 2017
*nat
:PREROUTING ACCEPT [78882:6481642]
:INPUT ACCEPT [4098:841544]
:OUTPUT ACCEPT [27663:1690214]
:POSTROUTING ACCEPT [76645:4511582]
:VYATTA_PRE_DNAT_HOOK - [0:0]
:VYATTA_PRE_SNAT_HOOK - [0:0]
:WANLOADBALANCE - [0:0]
-A PREROUTING -j VYATTA_PRE_DNAT_HOOK
-A POSTROUTING -j VYATTA_PRE_SNAT_HOOK
-A POSTROUTING -o eth1 -m comment --comment SRC-NAT-5000 -j MASQUERADE
-A POSTROUTING -o eth2 -m comment --comment SRC-NAT-5002 -j MASQUERADE
-A POSTROUTING -o eth3 -m comment --comment SRC-NAT-5003 -j MASQUERADE
-A VYATTA_PRE_DNAT_HOOK -j RETURN
-A VYATTA_PRE_SNAT_HOOK -j WANLOADBALANCE
-A VYATTA_PRE_SNAT_HOOK -j RETURN
-A WANLOADBALANCE -m connmark --mark 0x1 -j SNAT --to-source 38.95.4.141
-A WANLOADBALANCE -m connmark --mark 0x2 -j SNAT --to-source 96.243.198.62
-A WANLOADBALANCE -m connmark --mark 0x3 -j SNAT --to-source 100.3.102.7
COMMIT
# Completed on Wed Nov  1 08:17:40 2017
# Generated by iptables-save v1.4.12.2 on Wed Nov  1 08:17:40 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:VYATTA_FW_IN_HOOK - [0:0]
:VYATTA_FW_LOCAL_HOOK - [0:0]
:VYATTA_FW_OUT_HOOK - [0:0]
:VYATTA_POST_FW_FWD_HOOK - [0:0]
:VYATTA_POST_FW_IN_HOOK - [0:0]
:VYATTA_POST_FW_OUT_HOOK - [0:0]
:VYATTA_PRE_FW_FWD_HOOK - [0:0]
:VYATTA_PRE_FW_IN_HOOK - [0:0]
:VYATTA_PRE_FW_OUT_HOOK - [0:0]
:WAN_IN - [0:0]
:WAN_LOCAL - [0:0]
-A INPUT -j VYATTA_PRE_FW_IN_HOOK
-A INPUT -j VYATTA_FW_LOCAL_HOOK
-A INPUT -j VYATTA_POST_FW_IN_HOOK
-A FORWARD -j VYATTA_PRE_FW_FWD_HOOK
-A FORWARD -j VYATTA_FW_IN_HOOK
-A FORWARD -j VYATTA_FW_OUT_HOOK
-A FORWARD -j VYATTA_POST_FW_FWD_HOOK
-A OUTPUT -j VYATTA_PRE_FW_OUT_HOOK
-A OUTPUT -j VYATTA_POST_FW_OUT_HOOK
-A VYATTA_FW_IN_HOOK -i eth2 -j WAN_IN
-A VYATTA_FW_IN_HOOK -i eth3 -j WAN_IN
-A VYATTA_FW_IN_HOOK -i eth1 -j WAN_IN
-A VYATTA_FW_LOCAL_HOOK -i eth2 -j WAN_LOCAL
-A VYATTA_FW_LOCAL_HOOK -i eth3 -j WAN_LOCAL
-A VYATTA_FW_LOCAL_HOOK -i eth1 -j WAN_LOCAL
-A VYATTA_POST_FW_FWD_HOOK -j ACCEPT
-A VYATTA_POST_FW_IN_HOOK -j ACCEPT
-A VYATTA_POST_FW_OUT_HOOK -j ACCEPT
-A VYATTA_PRE_FW_FWD_HOOK -j RETURN
-A VYATTA_PRE_FW_IN_HOOK -j RETURN
-A VYATTA_PRE_FW_OUT_HOOK -j RETURN
-A WAN_IN -m comment --comment WAN_IN-10 -m state --state RELATED,ESTABLISHED -j RETURN
-A WAN_IN -m comment --comment WAN_IN-20 -m state --state INVALID -j DROP
-A WAN_IN -m comment --comment "WAN_IN-10000 default-action drop" -j DROP
-A WAN_LOCAL -m comment --comment WAN_LOCAL-10 -m state --state RELATED,ESTABLISHED -j RETURN
-A WAN_LOCAL -m comment --comment WAN_LOCAL-20 -m state --state INVALID -j DROP
-A WAN_LOCAL -m comment --comment "WAN_LOCAL-10000 default-action drop" -j DROP
COMMIT
# Completed on Wed Nov  1 08:17:40 2017
# Generated by iptables-save v1.4.12.2 on Wed Nov  1 08:17:40 2017
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FW_CONNTRACK - [0:0]
:NAT_CONNTRACK - [0:0]
:VYATTA_CT_HELPER - [0:0]
:VYATTA_CT_IGNORE - [0:0]
:VYATTA_CT_OUTPUT_HOOK - [0:0]
:VYATTA_CT_PREROUTING_HOOK - [0:0]
:VYATTA_CT_TIMEOUT - [0:0]
:WLB_CONNTRACK - [0:0]
-A PREROUTING -j VYATTA_CT_IGNORE
-A PREROUTING -j VYATTA_CT_HELPER
-A PREROUTING -j VYATTA_CT_TIMEOUT
-A PREROUTING -j VYATTA_CT_PREROUTING_HOOK
-A PREROUTING -j WLB_CONNTRACK
-A PREROUTING -j NAT_CONNTRACK
-A PREROUTING -j FW_CONNTRACK
-A PREROUTING -j NOTRACK
-A OUTPUT -j VYATTA_CT_IGNORE
-A OUTPUT -j VYATTA_CT_HELPER
-A OUTPUT -j VYATTA_CT_TIMEOUT
-A OUTPUT -j VYATTA_CT_OUTPUT_HOOK
-A OUTPUT -j NAT_CONNTRACK
-A OUTPUT -j FW_CONNTRACK
-A OUTPUT -j NOTRACK
-A FW_CONNTRACK -j ACCEPT
-A NAT_CONNTRACK -j ACCEPT
-A VYATTA_CT_HELPER -p tcp -m tcp --dport 1525 -j CT --helper tns
-A VYATTA_CT_HELPER -p tcp -m tcp --dport 1521 -j CT --helper tns
-A VYATTA_CT_HELPER -p udp -m udp --dport 111 -j CT --helper rpc
-A VYATTA_CT_HELPER -p tcp -m tcp --dport 111 -j CT --helper rpc
-A VYATTA_CT_HELPER -j RETURN
-A VYATTA_CT_IGNORE -j RETURN
-A VYATTA_CT_OUTPUT_HOOK -j RETURN
-A VYATTA_CT_PREROUTING_HOOK -j RETURN
-A VYATTA_CT_TIMEOUT -j RETURN
-A WLB_CONNTRACK -j ACCEPT
COMMIT
# Completed on Wed Nov  1 08:17:40 2017
