iptablesraw.txt
IPTables with eth1 isp disabled and eth2 and eth3 ISP evenly loaded

*mangle
:PREROUTING ACCEPT [950592:143518993]
-A PREROUTING -d 10.2.2.0/24 -i eth0 -j ACCEPT
-A PREROUTING -d 10.4.0.0/16 -i eth0 -j ACCEPT
-A PREROUTING -d 10.32.0.0/24 -i eth0 -j ACCEPT
-A PREROUTING -d 10.54.0.0/19 -i eth0 -j ACCEPT
-A PREROUTING -d 10.55.1.0/24 -i eth0 -j ACCEPT
-A PREROUTING -d 10.64.0.0/16 -i eth0 -j ACCEPT
-A PREROUTING -d 10.92.2.0/24 -i eth0 -j ACCEPT
-A PREROUTING -d 10.172.0.0/16 -i eth0 -j ACCEPT
-A PREROUTING -d 10.200.0.0/24 -i eth0 -j ACCEPT
-A PREROUTING -d 10.200.2.0/24 -i eth0 -j ACCEPT
-A PREROUTING -i eth0 -m state --state NEW -m statistic --mode random --probability 0.50000000000 -j ISP_eth2
-A PREROUTING -i eth0 -m state --state NEW -j ISP_eth3
-A PREROUTING -i eth0 -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A ISP_eth1 -j CONNMARK --set-xmark 0x1/0xffffffff
-A ISP_eth1 -j MARK --set-xmark 0x1/0xffffffff
-A ISP_eth1 -j ACCEPT
-A ISP_eth2 -j CONNMARK --set-xmark 0x2/0xffffffff
-A ISP_eth2 -j MARK --set-xmark 0x2/0xffffffff
-A ISP_eth2 -j ACCEPT
-A ISP_eth3 -j CONNMARK --set-xmark 0x3/0xffffffff
-A ISP_eth3 -j MARK --set-xmark 0x3/0xffffffff
-A ISP_eth3 -j ACCEPT

Input
filter input
-A INPUT -i eth2 -j WAN_LOCAL
-A INPUT -i eth3 -j WAN_LOCAL
-A INPUT -i eth1 -j WAN_LOCAL
-A WAN_LOCAL -m comment --comment WAN_LOCAL-10 -m state --state RELATED,ESTABLISHED -j RETURN
-A WAN_LOCAL -m comment --comment WAN_LOCAL-20 -m state --state INVALID -j DROP
-A WAN_LOCAL -m comment --comment "WAN_LOCAL-10000 default-action drop" -j DROP
-A INPUT -j ACCEPT

forward
-A VYATTA_FW_IN_HOOK -i eth2 -j WAN_IN
-A VYATTA_FW_IN_HOOK -i eth3 -j WAN_IN
-A VYATTA_FW_IN_HOOK -i eth1 -j WAN_IN
-A WAN_IN -m comment --comment WAN_IN-10 -m state --state RELATED,ESTABLISHED -j RETURN
-A WAN_IN -m comment --comment WAN_IN-20 -m state --state INVALID -j DROP
-A WAN_IN -m comment --comment "WAN_IN-10000 default-action drop" -j DROP
-A VYATTA_POST_FW_FWD_HOOK -j ACCEPT

filter output
-A VYATTA_POST_FW_OUT_HOOK -j ACCEPT

NAT Postrouting
-A POSTROUTING -m connmark --mark 0x1 -j SNAT --to-source 38.95.4.141
-A POSTROUTING -m connmark --mark 0x2 -j SNAT --to-source 96.243.198.62
-A POSTROUTING -m connmark --mark 0x3 -j SNAT --to-source 100.3.102.7
-A POSTROUTING -o eth1 -m comment --comment SRC-NAT-5000 -j MASQUERADE
-A POSTROUTING -o eth2 -m comment --comment SRC-NAT-5002 -j MASQUERADE
-A POSTROUTING -o eth3 -m comment --comment SRC-NAT-5003 -j MASQUERADE

First packet nated goes through rule, all the rest for that connection automagically NATed
